--- a/css/styles.css
+++ b/css/styles.css
@@ -169,8 +169,21 @@ a {
   height: 40px;
 }
 
+.icon--small {
+  width: 30px;
+  height: 30px;
+}
+
 .icon--primary {
   fill: var(--color-primary);
+}
+
+.icon--primary {
+  fill: var(--color-primary);
+}
+
+.icon--white {
+  fill: #fff;
 }
 
 .icon-container {
@@ -181,6 +194,10 @@ a {
   display: inline-flex;
   justify-content: center;
   align-items: center;
+}
+
+.icon-container--accent {
+  background: var(--color-accent);
 }
 
 /* Buttons */
@@ -425,14 +442,27 @@ a {
   bottom: 10px;
 }
 
+@media screen and (min-width: 768px) {
+  .quote {
+    font-size: 2.4rem;
+    line-height: 1.5;
+  }
+
+  .quote__author {
+    font-size: 2rem;
+  }
+  .quote__orgnization {
+    font-size: 1.6rem;
+  }
+}
 @media screen and (min-width: 1024px) {
   .quote {
     font-size: 2.4rem;
     line-height: 1.5;
   }
 
-  .quote__orgnization {
-    font-size: 1.6rem;
+  .quote__author {
+    font-size: 2.4rem;
   }
 }
 
@@ -452,4 +482,25 @@ a {
   .grid--1x3 {
     grid-template-columns: repeat(3, 1fr);
   }
+}
+
+/* Testimonials */
+
+.testimonial {
+  padding: 3rem;
+}
+
+.testimonial__image {
+  position: relative;
+  margin: 0 30px;
+}
+
+.testimonial__image > img {
+  width: 100%;
+}
+
+.testimonial__image > .icon-container {
+  position: absolute;
+  top: 3rem;
+  right: -32px;
 }
