--- a/css/styles.css
+++ b/css/styles.css
@@ -317,11 +317,21 @@ a {
   border-radius: 7px;
   box-shadow: 0 0 20px 10px #f3f3f3;
   overflow: hidden;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .card__header,
 .card__body {
   padding: 2rem 3rem;
+}
+
+.card__body {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .card--primary .card__header {
@@ -334,12 +344,21 @@ a {
   color: #fff;
 }
 
+.card--primary .badge--primary {
+  background: #126de4;
+  padding: 0.5rem 1.5rem;
+}
+
 .card--secondary .badge--secondary {
   background: #02cdf1;
   padding: 0.5rem 1.5rem;
 }
 
 /* Plans */
+
+.plan {
+  transition: transform 0.3s ease-out;
+}
 
 .plan__name {
   color: #fff;
@@ -369,16 +388,25 @@ a {
   margin-bottom: 2rem;
 }
 
+.plan:hover {
+  transform: scale(1.05);
+}
+
 .plan--popular {
   position: relative;
+  transform: scale(1.1);
+}
+
+.plan--popular:hover {
+  transform: scale(1.15);
 }
 
 .plan--popular .card__header::before {
   content: url(../images/popular.svg);
-  width: 40px;
+  width: 30px;
   display: inline-block;
   position: absolute;
-  top: -5.5px;
+  top: -4px;
   right: 5%;
 }
 
@@ -754,4 +782,16 @@ a {
   .block-domain__prices {
     font-size: 1.5rem;
   }
+}
+
+/* Plans Block */
+
+.block-plans .grid {
+  gap: 8rem 4rem;
+}
+
+.block-plans .plan {
+  max-width: 500px;
+  margin: 0 auto;
+  width: 100%;
 }
