Build the features block.

--- a/css/styles.css
+++ b/css/styles.css
@@ -795,3 +795,34 @@ a {
   margin: 0 auto;
   width: 100%;
 }
+
+/* Features Block */
+
+.feature {
+  gap: 4rem 2rem;
+  margin: 12rem 0;
+}
+
+.feature:first-of-type {
+  margin-top: 6rem;
+}
+
+.feature__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.feature__heading {
+  margin-top: 1rem;
+}
+
+.feature__image {
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .feature:nth-of-type(even) .feature__content {
+    order: 2;
+  }
+}
